--- a/AVR/LEDBall/Makefile
+++ b/AVR/LEDBall/Makefile
@@ -24,7 +24,7 @@ PROGNAME=LEDBall
 # (list all files to compile, e.g. 'a.c b.cpp as.S'):
 # Use .cc, .cpp or .C suffix for C++ files, use .S 
 # (NOT .s !!!) for assembly source code files.
-SOURCES=main.cpp 
+SOURCES=main.cpp LEDBall.cpp MySerial.cpp
 
 
 include ../Makefile_common.mk
