Cleanup make scheme.

--- a/AVR/lib_src/Makefile
+++ b/AVR/lib_src/Makefile
@@ -8,7 +8,7 @@
 
 AVR_HOME ?= ${HOME}/code/AVR
 
-UTILS= Adafruit_NeoPixel EEPROM Firmata LiquidCrystal SPI Sensirion  SoftwareSerial Wire
+UTILS= Adafruit_NeoPixel EEPROM Firmata LiquidCrystal SPI Sensirion  SoftwareSerial Wire RF24
 CORE = Core
 
 
@@ -16,35 +16,37 @@ all: includes libarduino.a  libardionoutil.a
 
 
 includes:
-	for i in $(CORE) $(UTILS); do \
-	    echo "Installing includes for $$i";cd $$i; make includes; cd ..;\
+	@echo "Installing all includes"
+	@for i in $(CORE) $(UTILS); do \
+	    cd $$i; make includes; cd ..;\
 	done
 
 libarduino.a:
-	for i in $(CORE); do \
-	   echo  "Making $$i "; cd $$i; make all; cd ..; \
+	@for i in $(CORE); do \
+	   echo  "\nMaking $$i \n"; cd $$i; make all; cd ..; \
 	done
 
 libardionoutil.a:
-	for i in $(UTILS); do \
-	    echo "Making $$i  "; cd $$i; make all;  cd ..; \
+	@for i in $(UTILS); do \
+	    echo  "\nMaking $$i \n"; cd $$i; make all;  cd ..; \
 	done
 
 
 install:
-	for i in $(CORE) $(UTILS); do \
-	    echo "installing $$i  "; cd $$i; make install;  cd ..; \
+	@for i in $(CORE) $(UTILS); do \
+	    cd $$i; make install;  cd ..; \
 	done
 
 
 clean:
-	for i in $(CORE) $(UTILS); do \
+	@for i in $(CORE) $(UTILS); do \
 	    echo "Cleaning $$i  "; cd $$i; make clean;  cd ..; \
 	done
 
 distclean:
-	for i in $(CORE) $(UTILS); do \
-	    echo "Cleaning $$i  "; cd $$i; make distclean;  cd ..; \
+	@for i in $(CORE) $(UTILS); do \
+	    echo "DistCleaning $$i  "; cd $$i; make distclean;  cd ..; \
 	done
 
-
+help:
+	@cd Core; make help; cd ..
