Permit more control over library inclusion by defining LIB. This can reduce program size by 3k or more.

--- a/AVR/Minimal/Makefile
+++ b/AVR/Minimal/Makefile
@@ -29,7 +29,10 @@ PROGNAME=Minimal
 
 SOURCES=main.cpp
 
-
+#
+# Set a simpler LIB, only arduino
+#
+LIBS = -L${AVR_HOME}/lib/$(SYSTEM_TYPE)  -larduino  
 #
 # Include all the common rules for AVR.
 #
