So, on the BBB the return code is \r, make this settable.

--- a/AVR/UART/Makefile
+++ b/AVR/UART/Makefile
@@ -42,7 +42,8 @@ LIBS =  -lc
 #
 # Include all the common rules for AVR.
 #
-OTHER_DEFINES= -DUART_CTS_ENABLE=1 -DUART_USE_BUFFERS=1 -DTX_UART_BUF_SIZE=512 -DRX_UART_BUF_SIZE=64 
+OTHER_DEFINES= -DUART_CTS_ENABLE=1 -DUART_USE_BUFFERS=1 -DTX_UART_BUF_SIZE=512 -DRX_UART_BUF_SIZE=64
+# OTHER_DEFINES=  -DUART_USE_BUFFERS=1 -DTX_UART_BUF_SIZE=64 -DRX_UART_BUF_SIZE=64
 
 
 include ../Makefile_common.mk
