Late commit of some minor changes

--- a/AVR/LEDBall/Makefile
+++ b/AVR/LEDBall/Makefile
@@ -27,7 +27,8 @@ PROGNAME=LEDBall
 SOURCES=main.cpp uart.cpp NeoPixel.cpp LEDBall.cpp
 
 # Simplify the libraries. No Arduino stuff. Minimal printf
-LIBS = -Wl,-u,vfprintf -lprintf_min -lc
-
+#LIBS = -Wl,-u,vfprintf -lprintf_min -lc
+LIBS = -Wl,-u,vfprintf -lprintf_flt -lm -lc
+OTHER_DEFINES= -DMAX_X=4 -DMAX_Y=8 -DSTANDARD=2 -DUART_CTS_ENABLE=1 -DUART_USE_BUFFERS=1 
 
 include ../Makefile_common.mk
