--- a/Esp32/SleepBatteryTest/platformio.ini
+++ b/Esp32/SleepBatteryTest/platformio.ini
@@ -15,7 +15,9 @@ framework = espidf
 monitor_speed = 115200
 monitor_port = /dev/tty.usbmodem2101
 upload_port = /dev/tty.usbmodem2101
-build_flags = -D CHIP_NUMBER_NUM=3
+build_flags = -D CHIP_NUMBER_NUM=1
+monitor_filters =
+  direct   ; Keep color control codes.
 
 [env:seeed_xiao_esp32c3]
 platform = espressif32
@@ -25,3 +27,6 @@ monitor_speed = 115200
 monitor_port = /dev/tty.usbmodem2101
 upload_port = /dev/tty.usbmodem2101
 build_flags = -D CHIP_NUMBER_NUM=4
+monitor_filters =
+  direct   ; Keep color control codes.
+
