Working red-light-pocket-lamp for Minka

--- a/AVR/RedLight/platformio.ini
+++ b/AVR/RedLight/platformio.ini
@@ -8,9 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; Set the fuses for 8MHz internal clock with 1/8 prescaler, brownout detection off.
+; avrdude -p m168 -P usb -c avrispmkII -v -v -U lfuse:w:0x62:m -U hfuse:w:0xdf:m -U efuse:w:0xf9:m
+; avrdude -p m328p -P usb -c avrispmkII -v -v -U lfuse:w:0x62:m -U hfuse:w:0xd9:m -U efuse:w:0xff:m
+
 [env:ATmega168]
 platform = atmelavr
 board = ATmega168
+board_build.f_cpu = 1000000UL
 upload_protocol = custom
 upload_port = usb
 upload_flags =
@@ -29,6 +34,7 @@ upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
 [env:ATmega328P]
 platform = atmelavr
 board = ATmega328P
+board_build.f_cpu = 1000000UL
 upload_protocol = custom
 upload_port = usb
 upload_flags =
