--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,18 @@ tmp
 # Copied include files
 # AVR/include/*.h
 
+# CLION
+.idea
+
+# Visual Code
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
+
+# Platform IO
+.pio
+
 # XCode user data
 AVR/AVR2.xcworkspace/xcuserdata
 *.xcodeproj
